added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -35,9 +36,11 @@
         <h2>CSS</h2>
 
         <ul>
-
-          <li>Enter your CSS notes here.</li>
-
+          <li>A margin indicates how much space we want around an element.</li>
+          <li>A padding indicates how much space we want around the content of an element.</li>
+          <li>Class attribute allows us to share a CSS rule with any element of the same class.</li>
+          <li>The color property allows us to change the colour of text in an element.</li>
+          <li>We can use * attribute to assign the same css rules for every element on a webpage.</li>
         </ul>
 
       </section>
