--- a/index.html
+++ b/index.html
@@ -19,17 +19,12 @@
         <h2>HTML</h2>
 
         <ul>
-
           <li>The head element contains information about the webpage.</li>
-
           <li>The body element represents the visible content shown to the user.</li>
-
           <li>The ul element creates an unordered list.</li>
-
           <li>The img element requires a src attribute with reference to the location of the image file, and a alt attribute to display descriptive text when the image is not available.</li>
-
         </ul>
-
+      
       </section>
    
       <section class="card" id="css-section">
@@ -51,17 +46,11 @@
         <h2>Git</h2>
 
         <ul>
-
           <li>git status: checks what branch we are currently on.</li>
-
           <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
-
           <li>git clone repo-address: clones the repository into the IDE.</li>
-
           <li>git add -A: adds a change in the working directory to the stage area.</li>
-
           <li>git pull origin main: pulls changes from the origin branch, merging them to the locally checked-out branch.</li>
-
         </ul>
 
       </section>
@@ -71,9 +60,11 @@
         <h2>JavaScript</h2>
 
         <ul>
-
-          <li>Enter your JavaScript notes here.</li>
-
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>An array is an object which can hold a list of strings or numbers.</li>
+          <li>A function is a block of code that is used to perform a task.</li>
+          <li>Math.floor(Math.random() * ARRAY.length) gives us a random number from 0 to the number of values in an array.</li>
         </ul>
 
       </section>
